# hxtc_template

./: .env.example  .gitignore  Cargo.toml
src/: app.rs  cache.rs  config.rs  error.rs  main.rs
src/app/: router.rs  setup.rs
src/app/core/: auth.rs
src/app/core/auth/: components.rs  contract.rs  data.rs  domain.rs  handler.rs  service.rs  setup.rs
src/app/handlers/: auth.rs
src/app/middleware/: auth.rs
src/app/middleware/auth/: contract.rs  interceptor.rs  setup.rs
src/app/router/: resources.rs
src/app/router/resources/: favicon.rs
src/cache/: adapters.rs  contracts.rs
src/config/: cache.rs  constants.rs
src/db/: adapters.rs  mod.rs
src/db/adapters/: session.rs  user.rs
src/db/entities/: mod.rs  prelude.rs  sessions.rs  users.rs
src/db/migrations/00000000000000_initial_setup/: down.sql
src/db/migrations/2023-05-05-200822_create_table_users/: up.sql
src/db/migrations/2023-05-05-200826_create_table_sessions/: up.sql
src/db/models/: session.rs  user.rs
src/db/repository/: session.rs  user.rs
