[package]
edition = "2021"
name = "hxtc_template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-trait = "0.1.68"
chrono = "0.4.24"
futures-util = "0.3.28"
hextacy = { path = "../hextacy/hextacy" }
lazy_static = "1.4.0"
mockall = "0.11.4"
reqwest = { version = "0.11.17", features = ["json"] }
sea-orm = { version = "0.11.3", features = ["runtime-tokio", "sqlx-postgres"] }
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["v4"] }
validify = "1.0.11"
